[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Screens/LoginPage.gd" type="Script" id=1]
[ext_resource path="res://Images/planet_venus.jpg" type="Texture" id=2]
[ext_resource path="res://Images/UI/logo_small.png" type="Texture" id=3]
[ext_resource path="res://Fonts/RobotoTitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Roboto_Small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/InputFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/Roboto_VerySmall.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/Roboto18.tres" type="DynamicFont" id=8]
[ext_resource path="res://addons/Themes/input_box.tres" type="Theme" id=9]
[ext_resource path="res://Sounds/ClickSound.gd" type="Script" id=10]
[ext_resource path="res://Sounds/Tiny Button Push-SoundBible.com-513260752.wav" type="AudioStream" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="LoginPage" type="Node"]
script = ExtResource( 1 )

[node name="planet_venus" type="Sprite" parent="."]
position = Vector2( 961.553, 542.831 )
scale = Vector2( 1.20877, 1.17262 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 40
custom_constants/margin_left = 60
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 60.0
margin_top = 40.0
margin_right = 1860.0
margin_bottom = 1040.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 500.0
margin_top = 25.0
margin_right = 1300.0
margin_bottom = 974.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 525.0
texture = ExtResource( 3 )

[node name="GameName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 20.0
margin_right = 762.0
margin_bottom = 153.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 4 )
text = "Mimio Airship Fight"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 545.0
margin_right = 800.0
margin_bottom = 625.0
custom_constants/separation = 78

[node name="Username" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 16.0
margin_right = 89.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "E-mail"

[node name="UsernameTypeBox" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 167.0
margin_right = 800.0
margin_bottom = 80.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 6 )
secret_character = "#"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 645.0
margin_right = 800.0
margin_bottom = 725.0
custom_constants/separation = 30

[node name="Password" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 16.0
margin_right = 137.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "Password"

[node name="PasswordTypeBox" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 167.0
margin_right = 800.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 9
custom_fonts/font = ExtResource( 6 )
secret = true
secret_character = "â€¢"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 745.0
margin_right = 800.0
margin_bottom = 778.0

[node name="RememberMe" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 543.0
margin_right = 772.0
margin_bottom = 33.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 7 )
text = "Remember My Password"

[node name="RememberPassword" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 776.0
margin_right = 800.0
margin_bottom = 33.0
size_flags_horizontal = 8

[node name="Sign In" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 798.0
margin_right = 800.0
margin_bottom = 852.0
custom_fonts/font = ExtResource( 5 )
text = "Sign In"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_left = 202.0
margin_top = 872.0
margin_right = 598.0
margin_bottom = 905.0
size_flags_horizontal = 6
custom_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_right = 267.0
margin_bottom = 33.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "Don't have a Mimio account?"
align = 1

[node name="Register" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_left = 272.0
margin_right = 396.0
margin_bottom = 33.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0.764706, 1, 1 )
text = "Register Now"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_left = 336.0
margin_top = 925.0
margin_right = 464.0
margin_bottom = 949.0
size_flags_horizontal = 4
custom_constants/separation = 5

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 24.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 8 )
text = "Or"
align = 1

[node name="LoginAsGuest" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 21.0
margin_right = 128.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0.764706, 1, 1 )
custom_constants/hseparation = 0
text = "Login As Guest"

[node name="MarginContainer2" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.18176
margin_top = 5.63593
margin_right = -6.18176
margin_bottom = 5.63599
custom_constants/margin_right = 500
custom_constants/margin_top = 100
custom_constants/margin_left = 500
custom_constants/margin_bottom = 100

[node name="RegisterPopUpMenu" type="PopupMenu" parent="MarginContainer2"]
margin_left = 500.0
margin_top = 100.0
margin_right = 1420.0
margin_bottom = 980.0
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/RegisterPopUpMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 40
custom_constants/margin_left = 60
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer"]
margin_left = 60.0
margin_top = 40.0
margin_right = 860.0
margin_bottom = 840.0
custom_constants/separation = 14

[node name="CloseIcon" type="Button" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_left = 760.0
margin_right = 800.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Header" type="Label" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_left = 237.0
margin_top = 54.0
margin_right = 562.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Register"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 800.0
margin_bottom = 356.0
size_flags_horizontal = 5
size_flags_vertical = 0
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 800.0
margin_bottom = 48.0
custom_constants/separation = 20

[node name="Username" type="Label" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 89.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 5 )
text = "E-mail"

[node name="EmailTypeBox" type="LineEdit" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 800.0
margin_bottom = 128.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 6 )
secret_character = "#"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 800.0
margin_bottom = 498.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 800.0
margin_bottom = 48.0
custom_constants/separation = 20

[node name="Username" type="Label" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 140.0
margin_bottom = 48.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 5 )
text = "Username"

[node name="UsernameTypeBox" type="LineEdit" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 800.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 9
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 6 )
secret_character = "â€¢"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_top = 512.0
margin_right = 800.0
margin_bottom = 640.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_right = 800.0
margin_bottom = 48.0
custom_constants/separation = 20

[node name="Password" type="Label" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 137.0
margin_bottom = 48.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 5 )
text = "Password"

[node name="PasswordTypeBox" type="LineEdit" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/VBoxContainer3"]
margin_top = 58.0
margin_right = 800.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 9
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 6 )
secret = true
secret_character = "â€¢"

[node name="Register" type="Button" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_left = 300.0
margin_top = 654.0
margin_right = 500.0
margin_bottom = 724.0
rect_min_size = Vector2( 200, 70 )
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 5 )
text = "Register"

[node name="Error" type="Label" parent="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer"]
margin_left = 400.0
margin_top = 738.0
margin_right = 400.0
margin_bottom = 786.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 300 )
custom_constants/margin_right = 500
custom_constants/margin_top = 350
custom_constants/margin_left = 500
custom_constants/margin_bottom = 400

[node name="ErrorPopUpDialog" type="PopupMenu" parent="MarginContainer3"]
margin_left = 500.0
margin_top = 350.0
margin_right = 1420.0
margin_bottom = 680.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 5
size_flags_vertical = 5
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/ErrorPopUpDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="CloseIcon2" type="Button" parent="MarginContainer3/ErrorPopUpDialog/MarginContainer"]
margin_left = 860.0
margin_top = 20.0
margin_right = 900.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Error" type="Label" parent="MarginContainer3/ErrorPopUpDialog/MarginContainer"]
margin_left = 460.0
margin_top = 141.0
margin_right = 460.0
margin_bottom = 189.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="ClickSound" type="Node2D" parent="."]
editor/display_folded = true
visible = false
script = ExtResource( 10 )

[node name="ClickSound" type="AudioStreamPlayer2D" parent="ClickSound"]
stream = ExtResource( 11 )
volume_db = -1.0

[node name="Blank" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4/RememberPassword" to="." method="_on_RememberPassword_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Sign In" to="." method="_on_Sign_In_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5/Register" to="." method="_on_Register_Popup_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/LoginAsGuest" to="." method="_on_Guest_Login_pressed"]
[connection signal="pressed" from="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/CloseIcon" to="." method="_on_CloseIcon_pressed"]
[connection signal="pressed" from="MarginContainer2/RegisterPopUpMenu/MarginContainer/VBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="MarginContainer3/ErrorPopUpDialog/MarginContainer/CloseIcon2" to="." method="_on_CloseIcon2_pressed"]
